--- a/index.html
+++ b/index.html
@@ -433,54 +433,17 @@
 						<li><a href="associates.html"><i class="fa-solid fa-tag"></i>Associates</a></li>
 					</ul>
 				</div>
+				<div class="top"><a href="#top"><i class="fa-solid fa-arrow-up"></i>Back to top</a></div>
 			</div>
-		<div class="top"><a href="#top"><i class="fa-solid fa-arrow-up"></i></a></div>
-		</div>
-		<div class="footer-txt">
-			<p id="footerYear"> </p>
+			<hr style="width: 90%; margin: auto;">
+			<div class="footer-txt">
+				<p id="footerYear"><script>
+					const date = new Date();
+					document.getElementById('footerYear').innerHTML = "&copy;" + date.getFullYear() + " All rights reserved. Powered by clean master.";
+				</script></p>
+			</div>
 		</div>
 	</section>
-
-<script>
-	const date = new Date();
-	document.getElementById('footerYear').innerHTML = "&copy;" + date.getFullYear() + " All rights reserved. Powered by clean master.";
-</script>
-<!--Script to send email-->
-<!--Fom Elasticemail.com/SMTPJS.com-->
-<!--This code is not working-->
-<!--<script>
-    function sendMail(){
-        Email.send({
-			SecureToken: "23a0e1b7-6dd7-4f96-8bc3-3819c13aeb02",
-            To : 'okothgerald449@gmail.com',
-            From : document.getElementById("email").value,
-            Subject : document.getElementById("mesgSubject").value,
-            Body : "First Name: " + document.getElementById("firstname").value +
-                    " <br> Last Name: " + document.getElementById("lastname").value +
-                    " <br> Email: " + document.getElementById("email").value +
-                    " <br> Number: " + document.getElementById("phoneNumber").value +
-                    " <br> Subject: " + document.getElementById("mesgSubject").value +
-                    " <br> Message: " + document.getElementById("msg").value
-        }).then(
-        message => alert("message sent successfully!")
-        );
-    }
-</script>-->
-
-<script>
-	// Function to toggle the menu open and close
-	function toggleMenu() {
-		var menu = document.getElementById("menuLinks");
-
-		if (menu.style.display === "block") {
-			menu.style.display = "none";
-			
-		} else {
-			menu.style.display = "block";
-		}
-	}
-</script>
-
 	
 </body>
 </html>
