Create team member section

--- a/index.html
+++ b/index.html
@@ -106,6 +106,40 @@
 			</div>
 		</div>
 	</section>
+<!-- TEAM SECTION -->
+	<section class="team">
+		<h3>Team Members</h3>
+
+		<div class="team-section">
+			<div class="team-member">
+				<div class="img">
+					<img src="Images/IMG_7958 (1).JPG" alt="" width="150px" height="150px">
+				</div>
+				<div class="team-p">
+					<span>Gerald Okoth</span>
+					<p>Web developer</p>
+				</div>
+			</div>
+			<div class="team-member">
+				<div class="img">
+					<img src="Images/124433781-640x480.webp" alt="" width="150px" height="150px">
+				</div>
+				<div class="team-p">
+					<span>Samson Ochieng</span>
+					<p>Back-end developer</p>
+				</div>
+			</div>
+			<div class="team-member">
+				<div class="img">
+					<img src="Images/images (4).jpeg" alt="" width="150px" height="150px">
+				</div>
+				<div class="team-p">
+					<span>Venessa</span>
+					<p>Database administrator</p>
+				</div>	
+			</div>
+		</div>
+	</section>
 <!--CARD SECTION-->
 	<section class="Card" id="buy">
 		<div>
